en/v0.3.1/_sources/reference/processors.rst.txt
.. _processors:

=====================
Processors
=====================


Data Processors
---------------

Text
~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.TextFuzzyDedup
    xpark.dataset.TextExactSubstringDedup

Audio
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.AudioCompute


Image
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.ImageCompute


Video
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.VideoCompute


AI Processors
-------------

Text
~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.TextEmbedding
    xpark.dataset.TextSummarize
    xpark.dataset.TextMask
    xpark.dataset.TextGenerate
    xpark.dataset.TextClassify
    xpark.dataset.TextFixGrammar
    xpark.dataset.TextSimilarity
    xpark.dataset.TextTranslate
    xpark.dataset.TextSentiment
    xpark.dataset.TextExtract
    xpark.dataset.TextPredicateEval

Image
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.ImageNSFWScore
    xpark.dataset.ImageTextSimilarityScore
    xpark.dataset.ImageAestheticScore


Audio
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.SpeechToText
